--- a/video.html
+++ b/video.html
@@ -23,12 +23,16 @@
             margin: 10px;
             padding: 15px;
             max-width: 300px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             text-align: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border: 2px solid rgba(255, 255, 255, 0.05);
             cursor: pointer;
             transition: box-shadow 0.3s;
         }
+
 
         .tile:hover img {
             transform: scale(1.05);
