--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
         @media (max-width: 882px) {
             .header {
-                scale: 80%;
+                font-size: 1rem;
                 width: 50%;
             }
             .fullscreen .text {
@@ -285,12 +285,16 @@
                 max-width: 100%;
                 scale: 80%;
             }
+            .header {
+                width: 80%;
+                font-size: 0.8rem;
+            }
         }
 
         @media (max-width: 378px) {
             .header {
                 width: 80%;
-                align-items: center;
+                font-size: 0.6rem;
             }
         }
 
